<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pantalla"
        android:layout_width="350dp"
        android:layout_height="130sp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:text=""
        android:textColor="#F5F5F5"
        android:textSize="60sp"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="350dp"
        android:layout_height="270dp"
        android:layout_marginStart="30sp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clean"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#424242"
                android:text="@string/clean"
                android:textColor="#FF5722"
                android:textSize="30sp" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#424242"
                android:text="@string/delete"
                android:textColor="#FF5722"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/siete"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#424242"
                android:text="@string/siete"
                android:textColor="#FAFAFA"
                android:textSize="30sp" />

            <Button
                android:id="@+id/ocho"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#424242"
                android:text="@string/ocho"
                android:textColor="#FAFAFA"
                android:textSize="30sp" />

            <Button
                android:id="@+id/nueve"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#424242"
                android:text="@string/nueve"
                android:textColor="#FAFAFA"
                android:textSize="30sp" />

            <Button
                android:id="@+id/multiplicar"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#424242"
                android:text="@string/multiplicar"
                android:textColor="#FF5722"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/cuatro"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_span="0"
                android:layout_weight="1"
                android:background="#424242"
                android:text="@string/cuatro"
                android:textColor="#FAFAFA"
                android:textSize="30sp" />

            <Button
                android:id="@+id/cinco"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#424242"
                android:text="@string/cinco"
                android:textColor="#FAFAFA"
                android:textSize="30sp" />

            <Button
                android:id="@+id/seis"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#424242"
                android:text="@string/seis"
                android:textColor="#FAFAFA"
                android:textSize="30sp" />

            <Button
                android:id="@+id/dividir"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#424242"
                android:text="@string/dividir"
                android:textColor="#FF5722"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/uno"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#424242"
                android:text="@string/uno"
                android:textColor="#FAFAFA"
                android:textSize="30sp" />

            <Button
                android:id="@+id/dos"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#424242"
                android:text="@string/dos"
                android:textColor="#FAFAFA"
                android:textSize="30sp" />

            <Button
                android:id="@+id/tres"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#424242"
                android:text="@string/tres"
                android:textColor="#FAFAFA"
                android:textSize="30sp" />

            <Button
                android:id="@+id/suma"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#424242"
                android:text="@string/suma"
                android:textColor="#FF5722"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/punto"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#424242"
                android:text="@string/punto"
                android:textColor="#FAFAFA"
                android:textSize="30sp" />

            <Button
                android:id="@+id/cero"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#424242"
                android:text="@string/cero"
                android:textColor="#FAFAFA"
                android:textSize="30sp" />

            <Button
                android:id="@+id/igual"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#424242"
                android:text="@string/igual"
                android:textColor="#FAFAFA"
                android:textSize="30sp" />

            <Button
                android:id="@+id/resta"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#424242"
                android:text="@string/resta"
                android:textColor="#FF5722"
                android:textSize="30sp" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>